[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Piotr Gabara <piotr.x.gabara@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.2"
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.23", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
uuid = { version = "1.2", features = ["v4"] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.11"
