[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Piotr Gabara <piotr.x.gabara@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.2"
config = "0.13"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.1"
tokio = { version = "1.23", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
uuid = { version = "1.2", features = ["v4"] }
secrecy = { version = "0.8", features = ["serde"] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]

[dev-dependencies]
reqwest = "0.11"
once_cell = "1"